--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clearmac",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,11 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/checkbox": "^0.5.12",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^1.1.2",
     "expo": "~46.0.13",
+    "expo-checkbox": "^2.2.0",
+    "expo-clipboard": "~3.1.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-collapsible": "^1.6.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.0",
+    "react-native-toast-message": "^2.1.5",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
